# GDSCWaseda_Slackbot

./: .gitignore  README.md  encrypt.py  google.py  main.py  pyproject.toml
